fileapi/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: filecache
  namespace: backend
  labels:
    app: filecache
    tier: backend
  annotations:
    author: "Richard Jonas"
spec:
  containers:
  - name: filecache
    image: redis:latest
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: filecache-service
  namespace: backend
spec:
  selector:
    app: filecache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
